--- a/010000_holybible.html
+++ b/010000_holybible.html
@@ -170,6 +170,14 @@
 <hr class="docutils" />
 <blockquote>
 <div>CN Version3：中文版本3。我的翻译，侧重于方便英语学习，所以严格意义上说不能称作“翻译”；</div></blockquote>
+<hr class="docutils" />
+<blockquote>
+<div><p><strong>英文音标符号</strong></p>
+<p>英语音标总共有48个，其中元音20个，辅音28个。</p>
+<p>元音包括单元音（[i:]、[ɪ]、[ɔ:]、[ɒ]、[u:]、[ʊ]、[ɜː]、[ə]、[ɑ:]、[ʌ]、[e]、[æ]）和双元音（[eɪ]、[aɪ]、[ɔɪ]、[ɪə]、[eə]、[ʊə]、[aʊ] 、[əʊ]）。</p>
+<p>辅音包括：[p]、[b]、[t]、[d]、[k]、[g]、[f]、[v]、[s]、[z]、[θ]、[ð]、[ʃ]、[ʒ]、[tʃ]、[dʒ]、[tr]、[dr]、[ts]、[dz]、[m]、[n]、[ŋ]、[h]、[l]、[r]、[j]、[w]。</p>
+<p>①  ②  ③  ④  ⑤  ⑥  ⑦  ⑧  ⑨  ⑩  →  ←</p>
+</div></blockquote>
 <div class="line-block">
 <div class="line"><br /></div>
 </div>
