--- a/010000_holybible.html
+++ b/010000_holybible.html
@@ -162,7 +162,18 @@
 <div><p><strong>不同版本说明：</strong></p>
 <p>EN Version1：英文版本1。kindle版中英文对照豪华版、和合本；</p>
 <font color=red>EN Version2：英文版本2。来自于剧场版《圣经》NIV（82）；NIV（New International Version）是新国际版。NIV版简单易懂，也是针对不以英语为母语的国际读者，
-适合为学英语而选择；</font></div></blockquote>
+适合为学英语而选择；</font><div class="line-block">
+<div class="line"><br /></div>
+</div>
+<p>新国际版（New International Version，简称NIV）是一个当代英语圣经译本，也是目前在英语国家被最为广泛使用的圣经版本。迄今为止已售出超过两亿一千万本。</p>
+<p>该版本的翻译工作始于1965年，由现在的国际圣经协会（International Bible Society，当时名为纽约圣经协会）提供资助。新约完成并出版于1973年，旧约完成于1978年，并与进一步
+修订后的新约一同出版。1984年，在经过了更仔细的修订后，最终的定本得以出版。这项庞大的翻译工程由来自美国、加拿大、英国、澳大利亚、新西兰和南非的一百多个有着二十多种不同
+宗教背景的圣经学者共同承担。他们分属圣公会、浸信会、福音派、卫斯理宗、长老会等不同教派。</p>
+<p>尽管一些保守派信徒仍然坚持钦定版圣经为唯一标准圣经译本（参见en:King-James-Only Movement）并指新国际版有若干异端倾向，这个新版本仍被普遍接受，同时被许多人认为是一个优秀
+的译本并对早期的包括詹姆士王译本在内的各历史性版本提供了有益的补充。由于采纳了含二十世纪中叶新发现的死海古卷在内的更广泛的原始文本，新国际版甚至被认为更为准确。与新美国
+标准版（New American Standard Bible）比较，新国际版稍多意译成分。从总体上来说，新国际版是一部保留传统福音派神学观点的当代英语译本。撇开神学观点的差异，新国际版同修订标准
+版（Revised Standard Version）较为接近，两者都采用了比詹姆士王译本的 Textus Receptus 更为细致的新约希腊文原始底本。作为抗议宗圣经译本，新国际版不收录次经。`</p>
+</div></blockquote>
 <hr class="docutils" />
 <blockquote>
 <div><p>CN Version1：中文版本1。kindle版中英文对照豪华版、和合本；【和合本】是各大宗派在二十世纪初合作翻译的中文译本，其中旧约全书译自希伯来语-亚兰语，新约全书译自希腊语；</p>
